deployment/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: app
spec: {}
status: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: app
  name: app
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app
  name: appsvc
  namespace: app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app
status:
  loadBalancer: {}
  
---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mw-admin
  namespace: app
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /app
  stripPrefix:
    forceSlash: false
    prefixes:
      - /web

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1
  namespace: app
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: app-mw-admin@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: www.dreggystore.com
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name:  appsvc
                port:
                  number: 80
          - path: /web
            pathType: Prefix
            backend:
              service:
                name:  appsvc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  appsvc
                port:
                  number: 80
